--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <title></title>
+    
+    <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
-	<div class="container" >
-		<div>Nav bar here...</div>
-		{{{body}}}
-	</div>
+    <div class="container">
+        {{{body}}}
+    </div>
+
 </body>
+
 </html>
